# aoc

./: .gitignore  index.js  package-lock.json  package.json
2021/: index.js  package-lock.json  package.json
2021/commands/: part.js
2021/day1/: part1.js  part2.js
2022/day_1/src/: main  main.rs
2022/day_2/src/: main.rs
2022/day_3/: Cargo.toml
2022/day_3/src/: main.rs
2022/day_4/: Cargo.toml  input.txt
2022/day_4/src/: main.rs
2022/day_5/: scratch.txt
2022/day_5/src/: main.rs
2022/day_8/: Cargo.toml  input.txt
2022/day_8/src/: main.rs
2023/rust/day0/: Cargo.toml
2023/rust/day0/src/: main.rs
2023/rust/day1/: Cargo.toml
2023/rust/day10/: Cargo.toml
2023/rust/day11/: Cargo.toml
2023/rust/day12/: Cargo.toml
2023/rust/day13/: Cargo.toml
2023/rust/day14/: Cargo.toml
2023/rust/day15/: Cargo.toml
2023/rust/day16/: Cargo.toml
2023/rust/day17/: Cargo.toml
2023/rust/day18/: Cargo.toml
2023/rust/day19/: Cargo.toml
2023/rust/day2/: Cargo.toml
2023/rust/day2/src/: main.rs
2023/rust/day20/: Cargo.toml
2023/rust/day21/: Cargo.toml
2023/rust/day22/: Cargo.toml
2023/rust/day23/: Cargo.toml
2023/rust/day24/: Cargo.toml
2023/rust/day25/: Cargo.toml
2023/rust/day3/: Cargo.toml
2023/rust/day3/src/: main.rs
2023/rust/day4/: Cargo.toml
2023/rust/day5/: Cargo.toml
2023/rust/day6/: Cargo.toml  example-input.txt
2023/rust/day7/: Cargo.toml  input.txt
2023/rust/day8/: Cargo.toml
2023/rust/day9/: Cargo.toml
2023/rust/src/: lib.rs
Day1/: part1.js  part2.js
commands/: list.js  part.js
day2/: part1.js
(+5 files in other folders)
