[package]
name = "day3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
num = "0.4.1"
jane-eyre = "0.3.0"
eyre = "0.6.9"
log = "0.4.20"
aoc = { path = ".." }
lazy_static = { version = "1.4.0", features = [] }
